added some extra details

--- a/src/main/resources/templates/main_pages/gym_classes_view.html
+++ b/src/main/resources/templates/main_pages/gym_classes_view.html
@@ -39,7 +39,9 @@
                 <img th:src="@{/images/yoga_class.jpg}" alt="Gym Class 1" class="gym-class-img">
                 <div class="gym-class-text">
                     <h2>Yoga</h2>
-                    <p>Descripción detallada de la clase de yoga. Esta clase se enfoca en la flexibilidad, fuerza y meditación.</p>
+                    <p>El yoga consiste en una serie de posturas (asanas) y técnicas de respiración (pranayama) que se practican de manera secuencial. Las clases pueden variar 
+                    desde sesiones suaves y relajantes hasta entrenamientos más intensos y físicamente demandantes.Promueve la relajación, reduce el estrés y mejora la claridad mental. 
+                    También fomenta la concentración y la atención plena.</p>
                 </div>
             </div>
         </section>
@@ -48,7 +50,8 @@
             <div class="gym-class-item">
                 <div class="gym-class-text">
                     <h2>Pilates</h2>
-                    <p>Descripción detallada del entrenamiento de fuerza. Esta clase se enfoca en el aumento de la masa muscular y la resistencia.</p>
+                    <p> El Pilates se centra en ejercicios controlados y precisos que se realizan en colchonetas o con equipamiento especializado.
+                    Los ejercicios se enfocan en el núcleo del cuerpo, incluyendo los músculos abdominales, de la espalda baja, las caderas y los glúteos.</p>
                 </div>
                 <img th:src="@{/images/pilates.jpg}" alt="Gym Class 2" class="gym-class-img">
             </div>
@@ -59,7 +62,8 @@
                 <img th:src="@{/images/body_pump.jpg}" alt="Gym Class 3" class="gym-class-img">
                 <div class="gym-class-text">
                     <h2>BodyPump</h2>
-                    <p>Descripción detallada de la clase de cardio. Esta clase se enfoca en mejorar la resistencia cardiovascular y quemar calorías.</p>
+                    <p>Cada clase sigue una coreografía predeterminada que incluye una serie de repeticiones altas con pesos bajos a moderados. Se trabaja 
+                    cada grupo muscular por separado, generalmente comenzando con las piernas y terminando con los abdominales.</p>
                 </div>
             </div>
         </section>
@@ -67,7 +71,7 @@
             <div class="gym-class-item">
                 <div class="gym-class-text">
                     <h2>Spinning</h2>
-                    <p>Descripción detallada del entrenamiento de fuerza. Esta clase se enfoca en el aumento de la masa muscular y la resistencia.</p>
+                    <p>Spinning se realiza en bicicletas estacionarias con resistencia ajustable. Las clases son guiadas por un instructor que marca el ritmo y la intensidad del entrenamiento al ritmo de la música..</p>
                 </div>
                 <img th:src="@{/images/spinning.jpg}" alt="Gym Class 2" class="gym-class-img">
             </div>
