--- a/src/main/resources/templates/main_pages/trainers.html
+++ b/src/main/resources/templates/main_pages/trainers.html
@@ -39,22 +39,22 @@
                 <div class="card">
                     <img th:src="@{/images/personal_trainer_1.jpg}" class="card-img-top" alt="Trainer 1">
                     <div class="card-body">
-                        <h3><strong>Entrenador 1</strong></h3>
-                        <p>Descripción breve del entrenador 1.</p>
+                        <h3><strong>Entrenador Juan</strong></h3>
+                        <p>Entrenador personal por mas de 5 años, especializado en crear rutinas efectivas</p>
                     </div>
                 </div>
                 <div class="card">
                     <img th:src="@{/images/personal_trainer_2.jpg}" class="card-img-top" alt="Trainer 2">
                     <div class="card-body">
-                        <h3><strong>Entrenador 2</strong></h3>
-                        <p>Descripción breve del entrenador 2.</p>
+                        <h3><strong>Entrenador Gabriel</strong></h3>
+                        <p>Entrenador y nutricionista, especializado en hacer seguimiento a los clientes para poder mejorar su progreso</p>
                     </div>
                 </div>
                 <div class="card">
                     <img th:src="@{/images/personal_trainer_3.jpg}" class="card-img-top" alt="Trainer 3">
                     <div class="card-body">
-                        <h3><strong>Entrenador 3</strong></h3>
-                        <p>Descripción breve del entrenador 3.</p>
+                        <h3><strong>Entrenador Guillermo</strong></h3>
+                        <p>Profesor de las clases de Spinning y Pilates, especializado en motivar a las personas a seguir con el ritmo de las clases</p>
                     </div>
                 </div>
             </div>
