--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -37,12 +37,13 @@
     <main>
             <h2>Bienvenido a Nuestro Gimnasio</h2>
             <h3>Tu salud es nuestra prioridad</h3>
-            <p>Aquí puedes colocar la información que desees sobre el gimnasio.</p>
+            <p>Hoy es el cambio, no esperes a mañana</p>
 
         <section class="video-section">
             <div class="video-text">
-                <h3>Entrena al lado de los mejores porefesinales en el sector</h3>
-                <p>Aquí puedes escribir sobre el contenido del video y cualquier otra información relevante.</p>
+                <h3>Entrena al lado de los mejores profesionales del sector</h3>
+                <p>Con mas de 2 años de experiencia el gimnasio Hercules siempre a ofrecido a sus clientes el mejor 
+                servicio con los mejores profesionales, nos caracterizamos por nuestra cercania con todo aquel que quiera entrenar con ganas.</p>
             </div>
             <video width="700" height="auto" controls class="trainer-video">
                 <source th:src="@{/videos/personal_trainer_video.mp4}" type="video/mp4">
@@ -54,15 +55,15 @@
 
         <section class="gallery">
             <h2>Nuestro Espacio</h2>
-            <p>Aquí puedes escribir más información sobre las instalaciones y otros aspectos del gimnasio.</p>
+            <p>Nuestras últimas instalaciones</p>
             <div class="image-gallery">
                 <div class="gallery-item">
                     <img th:src="@{/images/gym_view.jpg}" alt="Gym view 1">
-                    <p>Descripción de la imagen 1</p>
+                    <p>Imagen por fuera del gimnasio</p>
                 </div>
                 <div class="gallery-item">
                     <img th:src="@{/images/gym_view_2.jpg}" alt="Gym view 2">
-                    <p>Descripción de la imagen 1</p>
+                    <p>Imagen por fuera del gimnasio</p>
                 </div>
             </div>
         </section>
